[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["ruslanakhmett <sccrsccr1@gmail.com>"]
packages = [
  { include = "brain_games" },
]


[tool.poetry.dependencies]
python = "^3.8"
#prompt = "^1.1.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:questions_main"
brain-calc = "brain_games.scripts.brain_calc:calc_main"
brain-gcd = "brain_games.scripts.brain_gcd:gcd_main"
brain-progression = "brain_games.scripts.brain_progression:progression_main"
brain-prime = "brain_games.scripts.brain_prime:prime_main"
